--- a/nhl.html
+++ b/nhl.html
@@ -96,7 +96,70 @@
 </thead>
 <tbody>
         <tr>
-</tbody></table>
+            <td><a href="https://roxiestreams.live/nhl-streams-1">New York Rangers vs New York Islanders</a></td>
+            <td>December 27, 2025 03:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-28 15:00:00" data-start="2025-12-27 15:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-2">Boston Bruins vs Buffalo Sabres</a></td>
+            <td>December 27, 2025 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-28 16:00:00" data-start="2025-12-27 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-3">Ottawa Senators vs Toronto Maple Leafs</a></td>
+            <td>December 27, 2025 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-28 16:00:00" data-start="2025-12-27 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-4">Tampa Bay Lightning vs Florida Panthers</a></td>
+            <td>December 27, 2025 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-28 16:00:00" data-start="2025-12-27 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-5">Washington Capitals vs New Jersey Devils</a></td>
+            <td>December 27, 2025 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-28 16:00:00" data-start="2025-12-27 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-6">Detroit Red Wings vs Carolina Hurricanes</a></td>
+            <td>December 27, 2025 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-28 16:00:00" data-start="2025-12-27 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-7">Minnesota Wild vs Winnipeg Jets</a></td>
+            <td>December 27, 2025 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-28 16:00:00" data-start="2025-12-27 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-8">Nashville Predators vs St. Louis Blues</a></td>
+            <td>December 27, 2025 05:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-28 17:00:00" data-start="2025-12-27 17:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-9">Chicago Blackhawks vs Dallas Stars</a></td>
+            <td>December 27, 2025 05:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-28 17:00:00" data-start="2025-12-27 17:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-10">Anaheim Ducks vs Los Angeles Kings</a></td>
+            <td>December 27, 2025 06:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-28 18:00:00" data-start="2025-12-27 18:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-11">Edmonton Oilers vs Calgary Flames</a></td>
+            <td>December 27, 2025 07:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-28 19:00:00" data-start="2025-12-27 19:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-12">San Jose Sharks vs Vancouver Canucks</a></td>
+            <td>December 27, 2025 07:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-28 19:00:00" data-start="2025-12-27 19:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-13">Colorado Avalanche vs Vegas Golden Knights</a></td>
+            <td>December 27, 2025 07:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-28 19:00:00" data-start="2025-12-27 19:00:00"></span></td>
+        </tr></tbody></table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
 <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
