--- a/index.html
+++ b/index.html
@@ -188,6 +188,11 @@
                     <td><span class="countdown-timer" data-start="December 27, 2025 04:30:00" data-end="December 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
+                    <td><a href="https://roxiestreams.live/darts">World Darts Championship</a></td>
+                    <td>December 27, 2025 04:30 AM</td>
+                    <td><span class="countdown-timer" data-start="December 27, 2025 04:30:00" data-end="December 30, 2025 23:30:00"></span></td>
+                </tr>
+                <tr>
                     <td><a href="https://roxiestreams.live/nfl">NCAA (College Football Bowls)</a></td>
                     <td>December 27, 2025 08:00 AM</td>
                     <td><span class="countdown-timer" data-start="December 27, 2025 08:00:00" data-end="December 30, 2025 23:30:00"></span></td>
