--- a/soccer-streams-1.html
+++ b/soccer-streams-1.html
@@ -15,6 +15,7 @@
 <script disable-devtool-auto src='https://cdn.jsdelivr.net/npm/disable-devtool/disable-devtool.min.js'></script>
     <script src="https://cdn.jsdelivr.net/npm/clappr@latest/dist/clappr.min.js"></script>
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-EQ3BHVQGMN"></script>
+<script async src="https://ss.mrmnd.com/static/c5f6662b-8d5a-4b10-9ee0-3e2c4520421a.js"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
@@ -100,7 +101,7 @@
             <div id="playerContainer"></div>
             <div class="streamchanger">
                 <button class="streambutton" onclick="showPlayer('clappr', 'https://daffodil.shadow-ran.online/usa.m3u8')">Stream 1</button>
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://601.shadow-ran.online/tnt.m3u8')">Stream 2</button>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://daffodil.shadow-ran.online/tnt.m3u8')">Stream 2</button>
             </div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.live"></iframe>
@@ -150,8 +151,8 @@
             }
         });
     </script>
-    <script src="js/bootstrap.bundle.min.js"></script>
-<div id="awn-z10753238"></div>
+    <script src="js/bootstrap.bundle.min.js">
+    <div id="awn-z10753238"></div>
 <script data-cfasync="false" type="text/javascript">
     var adcashMacros = {};
     var zoneNativeSett={container:"awn",baseUrl:"onclickalgo.com/script/native.php",r:[10753238]};
@@ -163,5 +164,7 @@
     <a href="https://onclickalgo.com/al/visit.php?al=1,6"
        style="position:absolute;top:-1000px;left:-1000px;width:1px;height:1px;visibility:hidden;display:none;border:medium none;background-color:transparent;"></a>
 </noscript>
+</script>
+
     </body>
 </html>
