--- a/nfl-streams-2.html
+++ b/nfl-streams-2.html
@@ -150,7 +150,7 @@
             }
         });
     </script>
-    <script src="js/bootstrap.bundle.min.js">
+    <script src="js/bootstrap.bundle.min.js"></script>
     <div id="awn-z10753238"></div>
 <script data-cfasync="false" type="text/javascript">
     var adcashMacros = {};
