--- a/soccer-streams-2.html
+++ b/soccer-streams-2.html
@@ -100,8 +100,8 @@
         <div class="fullplayer">
             <div id="playerContainer"></div>
             <div class="streamchanger">
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://601.shadow-ran.online/main.m3u8')">Stream 1</button>
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://601.shadow-ran.online/cbssn.m3u8')">Stream 2</button>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://daffodil.shadow-ran.online/main.m3u8')">Stream 1</button>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://daffodil.shadow-ran.online/cbssn.m3u8')">Stream 2</button>
             </div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.live"></iframe>
@@ -136,7 +136,7 @@
         }
 
         window.onload = function() {
-            showPlayer('clappr', 'https://601.shadow-ran.online/main.m3u8');
+            showPlayer('clappr', 'https://daffodil.shadow-ran.online/main.m3u8');
         };
     </script>
     <script>
@@ -165,5 +165,6 @@
        style="position:absolute;top:-1000px;left:-1000px;width:1px;height:1px;visibility:hidden;display:none;border:medium none;background-color:transparent;"></a>
 </noscript>
 </script>
+
     </body>
 </html>
