--- a/nfl.html
+++ b/nfl.html
@@ -97,7 +97,7 @@
 <tbody>
 <tr>
 <td><a href="https://roxiestreams.live/nfl-streams-1">Houston Texans vs Los Angeles Chargers</a>
-<td>December 27, 2025 13:30 AM</td>
+<td>December 27, 2025 13:30 PM</td>
 <td><span class="countdown-timer" data-end="December 28, 2025 09:00:00" data-start="December 27, 2025 13:30:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/nfl-streams-2">Baltimore Ravens vs Green Bay Packers</a>
