--- a/nfl-streams-1.html
+++ b/nfl-streams-1.html
@@ -11,17 +11,9 @@
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link href="/css/buttons.css" rel="stylesheet">
-<link href="imgs/iconn.png" rel="shortcut icon" type="x-icon"/>
-<script disable-devtool-auto src='https://cdn.jsdelivr.net/npm/disable-devtool/disable-devtool.min.js'></script>
+    <link href="imgs/iconn.png" rel="shortcut icon" type="x-icon"/>
+    <script disable-devtool-auto src='https://cdn.jsdelivr.net/npm/disable-devtool/disable-devtool.min.js'></script>
     <script src="https://cdn.jsdelivr.net/npm/clappr@latest/dist/clappr.min.js"></script>
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-EQ3BHVQGMN"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-EQ3BHVQGMN');
-</script>
     <style>
         .navbar-brand {
             color: pink;
@@ -70,7 +62,6 @@
             gap: 10px;
         }
     </style>
-
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-black">
@@ -81,14 +72,14 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/soccer">Soccer</a></li>
-<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/mlb">MLB</a></li>
-<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/nba">NBA</a></li>
-<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/nfl">NFL</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/soccer">Soccer</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/mlb">MLB</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/nba">NBA</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/nfl">NFL</a></li>
 <li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/nhl">NHL</a></li>
 
-<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/fighting">Fighting</a></li>
-<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/motorsports">Motorsports</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/fighting">Fighting</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/motorsports">Motorsports</a></li>
                     <li class="nav-item"><a class="nav-link" href="https://discord.gg/JhkVmejRmn">Stream Request (Discord)</a></li>
                 </ul>
             </div>
@@ -99,9 +90,9 @@
         <div class="fullplayer">
             <div id="playerContainer"></div>
             <div class="streamchanger">
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://daffodil.xn--1000-ugoxe8a5a7g4h.com/nfl.m3u8')">Stream 1</button>
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://601.xn--1000-ugoxe8a5a7g4h.comnfl.m3u8')">Stream 2</button>
-          </div>
+                <button class="streambutton" onclick="randomStream1()">Stream 1</button>
+                <button class="streambutton" onclick="randomStream2()">Stream 2</button>
+            </div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.live"></iframe>
             </div>
@@ -134,8 +125,85 @@
             }
         }
 
+        // Stream 1 Randomizer
+        function randomStream1() {
+            var links = [
+                "https://daffodil.xn--1000-ugoxe8a5a7g4h.com/nfl.m3u8",
+                "https://daffodil.alfirdaus.eu.org/nfl.m3u8",
+                "https://daffodil.daffodil.biroslotutama.org/nfl.m3u8",
+            ];
+            var randomLink = links[Math.floor(Math.random() * links.length)];
+            showPlayer('clappr', randomLink);
+        }
+
+        // Stream 2 Randomizer
+        function randomStream2() {
+            var links = [
+                "https://601.xn--1000-ugoxe8a5a7g4h.com/nfl.m3u8",
+                "https://601.alfirdaus.eu.org/nfl.m3u8",
+                "https://601.daffodil.biroslotutama.org/nfl.m3u8",
+            ];
+            var randomLink = links[Math.floor(Math.random() * links.length)];
+            showPlayer('clappr', randomLink);
+        }
+
+        // Stream 3 Randomizer
+        function randomStream3() {
+            var links = [
+                "https://daffodil.shadow-ran.online/ufcalt.m3u8",
+                "https://abby.shadow-ran.online/ufcalt.m3u8",
+            ];
+            var randomLink = links[Math.floor(Math.random() * links.length)];
+            showPlayer('clappr', randomLink);
+        }
+
+        // Stream 4 Randomizer
+        function randomStream4() {
+            var links = [
+                "https://600.tanjung.eu.org/hub.m3u8",
+                "https://600.tanjung.eu.org/hub.m3u8",
+                "https://600.tanjung.eu.org/hub.m3u8",
+                "https://600.tanjung.eu.org/hub.m3u8",
+                "https://ataide.xiaolongyi.dpdns.org/hub.m3u8"
+            ];
+            var randomLink = links[Math.floor(Math.random() * links.length)];
+            showPlayer('clappr', randomLink);
+        }
+
+        // Stream 5 Randomizer
+        function randomStream5() {
+            var links = [
+                "https://600.tanjung.eu.org/plus.m3u8",
+                "https://600.tanjung.eu.org/plus.m3u8",
+                "https://600.tanjung.eu.org/plus.m3u8",
+                "https://600.tanjung.eu.org/plus.m3u8",
+                "https://ataide.xiaolongyi.dpdns.org/plus.m3u8"
+            ];
+            var randomLink = links[Math.floor(Math.random() * links.length)];
+            showPlayer('clappr', randomLink);
+        }
+
+        // Stream 6 Randomizer
+        function randomStream6() {
+            var links = [
+                "https://600.tanjung.eu.org/simply.m3u8",
+                "https://600.tanjung.eu.org/simply.m3u8",
+                "https://600.tanjung.eu.org/simply.m3u8",
+                "https://600.tanjung.eu.org/simply.m3u8",
+                "https://ataide.xiaolongyi.dpdns.org/simply.m3u8"
+            ];
+            var randomLink = links[Math.floor(Math.random() * links.length)];
+            showPlayer('clappr', randomLink);
+        }
+
+        // On load: randomize default stream from Stream 1 sources
         window.onload = function() {
-            showPlayer('clappr', 'https://daffodil.xn--1000-ugoxe8a5a7g4h.com/nfl.m3u8');
+            var stream1Links = [
+                "https://daffodil.xn--1000-ugoxe8a5a7g4h.com/nfl.m3u8",
+                "https://daffodil.alfirdaus.eu.org/nfl.m3u8",
+            ];
+            var randomDefault = stream1Links[Math.floor(Math.random() * stream1Links.length)];
+            showPlayer('clappr', randomDefault);
         };
     </script>
     <script>
@@ -150,7 +218,7 @@
             }
         });
     </script>
-    <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="js/bootstrap.bundle.min.js">
     <div id="awn-z10753238"></div>
 <script data-cfasync="false" type="text/javascript">
     var adcashMacros = {};
@@ -164,6 +232,6 @@
        style="position:absolute;top:-1000px;left:-1000px;width:1px;height:1px;visibility:hidden;display:none;border:medium none;background-color:transparent;"></a>
 </noscript>
 </script>
-
+    
     </body>
 </html>
