--- a/aew.html
+++ b/aew.html
@@ -99,8 +99,9 @@
         <div class="fullplayer">
             <div id="playerContainer"></div>
             <div class="streamchanger">
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://daffodil.shadow-ran.online/aew.m3u8')">Stream 1</button>
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://601.shadow-ran.online/aewalt.m3u8')">Stream 2</button>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://daffodil.biroslotutama.org/aew.m3u8')">Stream 1</button>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://601.biroslotutama.org/aewalt.m3u8')">Stream 2 (ES)</button>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://601.biroslotutama.org/aewalt.m3u8')">Stream 3</button>
             </div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.live"></iframe>
