--- a/aew.html
+++ b/aew.html
@@ -100,7 +100,7 @@
             <div id="playerContainer"></div>
             <div class="streamchanger">
                 <button class="streambutton" onclick="showPlayer('clappr', 'https://daffodil.biroslotutama.org/aew.m3u8')">Stream 1</button>
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://601.biroslotutama.org/aewalt.m3u8')">Stream 2 (ES)</button>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://live21.bozztv.com/akamaissh101/ssh101/goooooldeportes/playlist.m3u8')">Stream 2 (ES)</button>
                 <button class="streambutton" onclick="showPlayer('clappr', 'https://601.biroslotutama.org/aewalt.m3u8')">Stream 3</button>
             </div>
             <div class="embedchat">
