--- a/nba-streams-1.html
+++ b/nba-streams-1.html
@@ -99,7 +99,7 @@
         <div class="fullplayer">
             <div id="playerContainer"></div>
 	<div class="streamchanger">
-	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('nba.m3u8', '601'))">Stream 1</button>
+	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('nhl.m3u8', 'daffodil'))">Stream 1</button>
 	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('nba6.m3u8', 'daffodil'))">Stream 2</button>
 	</div>
             <div class="embedchat">
