--- a/nfl-streams-1.html
+++ b/nfl-streams-1.html
@@ -11,9 +11,17 @@
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link href="/css/buttons.css" rel="stylesheet">
-    <link href="imgs/iconn.png" rel="shortcut icon" type="x-icon"/>
-    <script disable-devtool-auto src='https://cdn.jsdelivr.net/npm/disable-devtool/disable-devtool.min.js'></script>
+<link href="imgs/iconn.png" rel="shortcut icon" type="x-icon"/>
+<script disable-devtool-auto src='https://cdn.jsdelivr.net/npm/disable-devtool/disable-devtool.min.js'></script>
     <script src="https://cdn.jsdelivr.net/npm/clappr@latest/dist/clappr.min.js"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-EQ3BHVQGMN"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-EQ3BHVQGMN');
+</script>
     <style>
         .navbar-brand {
             color: pink;
@@ -62,6 +70,7 @@
             gap: 10px;
         }
     </style>
+
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-black">
@@ -72,14 +81,14 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/soccer">Soccer</a></li>
-                    <li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/mlb">MLB</a></li>
-                    <li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/nba">NBA</a></li>
-                    <li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/nfl">NFL</a></li>
+<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/soccer">Soccer</a></li>
+<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/mlb">MLB</a></li>
+<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/nba">NBA</a></li>
+<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/nfl">NFL</a></li>
 <li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/nhl">NHL</a></li>
 
-                    <li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/fighting">Fighting</a></li>
-                    <li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/motorsports">Motorsports</a></li>
+<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/fighting">Fighting</a></li>
+<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/motorsports">Motorsports</a></li>
                     <li class="nav-item"><a class="nav-link" href="https://discord.gg/JhkVmejRmn">Stream Request (Discord)</a></li>
                 </ul>
             </div>
@@ -89,10 +98,10 @@
     <div class="container container-fluid pt-2 text-white">
         <div class="fullplayer">
             <div id="playerContainer"></div>
-            <div class="streamchanger">
-                <button class="streambutton" onclick="randomStream1()">Stream 1</button>
-                <button class="streambutton" onclick="randomStream2()">Stream 2</button>
-            </div>
+	<div class="streamchanger">
+	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('nfl.m3u8', 'daffodil'))">Stream 1</button>
+	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('nfl.m3u8', '601'))">Stream 2</button>
+	</div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.live"></iframe>
             </div>
@@ -106,107 +115,46 @@
         <p class="mb-0 text-body-secondary text-center text-lg-start">Roxiestreams © 2024</p>
     </footer>
 
-    <script>
-        var clapprPlayer;
+<script>
+var clapprPlayer;
+var domains = [];
+var subdomain = 'daffodil';  // Edit this per HTML file
 
-        function showPlayer(playerType, stream) {
-            if (playerType === "clappr") {
-                if (clapprPlayer) {
-                    clapprPlayer.destroy();
-                }
+// Load domains from txt file
+fetch('domains.txt')
+  .then(response => response.text())
+  .then(data => {
+    domains = data.trim().split('\n').filter(d => d.trim());
+    // Auto-load initial stream after domains load
+    setTimeout(() => showPlayer('clappr', getRandomStream('nfl.m3u8')), 500);
+  })
+  .catch(() => {
+    console.error('Failed to load domains.txt');
+  });
 
-                clapprPlayer = new Clappr.Player({
-                    source: stream,
-                    parentId: "#playerContainer",
-                    height: '100%',
-                    width: '100%',
-                    autoPlay: true,
-                });
-            }
-        }
+function getRandomStream(streamPath, subdomain = 'daffodil') {
+  if (domains.length === 0) {
+    return `https://${subdomain}.shadow-ran.online/${streamPath}`; // Fallback
+  }
+  const randomDomain = domains[Math.floor(Math.random() * domains.length)];
+  return `https://${subdomain}.${randomDomain}/${streamPath}`;
+}
 
-        // Stream 1 Randomizer
-        function randomStream1() {
-            var links = [
-                "https://daffodil.xn--1000-ugoxe8a5a7g4h.com/nfl.m3u8",
-                "https://daffodil.alfirdaus.eu.org/nfl.m3u8",
-                "https://daffodil.biroslotutama.org/nfl.m3u8",
-            ];
-            var randomLink = links[Math.floor(Math.random() * links.length)];
-            showPlayer('clappr', randomLink);
-        }
-
-        // Stream 2 Randomizer
-        function randomStream2() {
-            var links = [
-                "https://601.xn--1000-ugoxe8a5a7g4h.com/nfl.m3u8",
-                "https://601.alfirdaus.eu.org/nfl.m3u8",
-                "https://601.biroslotutama.org/nfl.m3u8",
-            ];
-            var randomLink = links[Math.floor(Math.random() * links.length)];
-            showPlayer('clappr', randomLink);
-        }
-
-        // Stream 3 Randomizer
-        function randomStream3() {
-            var links = [
-                "https://daffodil.shadow-ran.online/ufcalt.m3u8",
-                "https://abby.shadow-ran.online/ufcalt.m3u8",
-            ];
-            var randomLink = links[Math.floor(Math.random() * links.length)];
-            showPlayer('clappr', randomLink);
-        }
-
-        // Stream 4 Randomizer
-        function randomStream4() {
-            var links = [
-                "https://600.tanjung.eu.org/hub.m3u8",
-                "https://600.tanjung.eu.org/hub.m3u8",
-                "https://600.tanjung.eu.org/hub.m3u8",
-                "https://600.tanjung.eu.org/hub.m3u8",
-                "https://ataide.xiaolongyi.dpdns.org/hub.m3u8"
-            ];
-            var randomLink = links[Math.floor(Math.random() * links.length)];
-            showPlayer('clappr', randomLink);
-        }
-
-        // Stream 5 Randomizer
-        function randomStream5() {
-            var links = [
-                "https://600.tanjung.eu.org/plus.m3u8",
-                "https://600.tanjung.eu.org/plus.m3u8",
-                "https://600.tanjung.eu.org/plus.m3u8",
-                "https://600.tanjung.eu.org/plus.m3u8",
-                "https://ataide.xiaolongyi.dpdns.org/plus.m3u8"
-            ];
-            var randomLink = links[Math.floor(Math.random() * links.length)];
-            showPlayer('clappr', randomLink);
-        }
-
-        // Stream 6 Randomizer
-        function randomStream6() {
-            var links = [
-                "https://600.tanjung.eu.org/simply.m3u8",
-                "https://600.tanjung.eu.org/simply.m3u8",
-                "https://600.tanjung.eu.org/simply.m3u8",
-                "https://600.tanjung.eu.org/simply.m3u8",
-                "https://ataide.xiaolongyi.dpdns.org/simply.m3u8"
-            ];
-            var randomLink = links[Math.floor(Math.random() * links.length)];
-            showPlayer('clappr', randomLink);
-        }
-
-        // On load: randomize default stream from Stream 1 sources
-        window.onload = function() {
-            var stream1Links = [
-                "https://daffodil.xn--1000-ugoxe8a5a7g4h.com/nfl.m3u8",
-                "https://daffodil.alfirdaus.eu.org/nfl.m3u8",
-                "https://daffodil.biroslotutama.org/nfl.m3u8",
-            ];
-            var randomDefault = stream1Links[Math.floor(Math.random() * stream1Links.length)];
-            showPlayer('clappr', randomDefault);
-        };
-    </script>
+function showPlayer(playerType, stream) {
+  if (playerType === "clappr") {
+    if (clapprPlayer) {
+      clapprPlayer.destroy();
+    }
+    clapprPlayer = new Clappr.Player({
+      source: stream,
+      parentId: "#playerContainer",
+      height: '100%',
+      width: '100%',
+      autoPlay: true,
+    });
+  }
+}
+</script>
     <script>
         document.addEventListener('contextmenu', function (e) {
             e.preventDefault();
@@ -219,7 +167,7 @@
             }
         });
     </script>
-    <script src="js/bootstrap.bundle.min.js">
+    <script src="js/bootstrap.bundle.min.js"></script>
     <div id="awn-z10753238"></div>
 <script data-cfasync="false" type="text/javascript">
     var adcashMacros = {};
@@ -233,6 +181,6 @@
        style="position:absolute;top:-1000px;left:-1000px;width:1px;height:1px;visibility:hidden;display:none;border:medium none;background-color:transparent;"></a>
 </noscript>
 </script>
-    
+
     </body>
 </html>
