--- a/nba.html
+++ b/nba.html
@@ -268,6 +268,110 @@
       </tr>
      </tbody>
     </table>
+    <h2>
+     NBA Schedule for December 28, 2025
+    </h2>
+    <table id="eventsTable">
+     <thead>
+      <tr>
+       <th>
+        Event
+       </th>
+       <th>
+        Start Time
+       </th>
+       <th>
+        Countdown
+       </th>
+      </tr>
+     </thead>
+     <tbody>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-1">
+         Golden State Warriors vs Toronto Raptors
+        </a>
+       </td>
+       <td>
+        December 28, 2025 12:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 29, 2025 12:30 PM:00" data-start="December 28, 2025 12:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-2">
+         Philadelphia 76ers vs Oklahoma City Thunder
+        </a>
+       </td>
+       <td>
+        December 28, 2025 12:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 29, 2025 12:30 PM:00" data-start="December 28, 2025 12:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-3">
+         Memphis Grizzlies vs Washington Wizards
+        </a>
+       </td>
+       <td>
+        December 28, 2025 3:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 29, 2025 3:00 PM:00" data-start="December 28, 2025 3:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-4">
+         Boston Celtics vs Portland Trail Blazers
+        </a>
+       </td>
+       <td>
+        December 28, 2025 3:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 29, 2025 3:00 PM:00" data-start="December 28, 2025 3:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-5">
+         Detroit Pistons vs Los Angeles Clippers
+        </a>
+       </td>
+       <td>
+        December 28, 2025 6:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 29, 2025 6:00 PM:00" data-start="December 28, 2025 6:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-6">
+         Sacramento Kings vs Los Angeles Lakers
+        </a>
+       </td>
+       <td>
+        December 28, 2025 6:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 29, 2025 6:30 PM:00" data-start="December 28, 2025 6:30 PM:00">
+        </span>
+       </td>
+      </tr>
+     </tbody>
+    </table>
     <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
      <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
       <li class="nav-item">
