--- a/nfl.html
+++ b/nfl.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
-
 <html data-bs-theme="dark" lang="en">
-<head>
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1" name="viewport"/>
-<title>Roxiestreams - Watch Live Sports, F1, UFC, NFL, TV</title>
-<meta content="Free PPV ufc, TV, NBA, NFL, and F1 streams" name="description"/>
-<meta content="Roxiestreams, ppv, boxing, dazn, f1, ufc, nba, for, stream, online, free, mrgamingstreams, f1, tv, nfl" name="keywords"/>
-<link href="https://fonts.googleapis.com" rel="preconnect"/>
-<link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
-<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
-<link href="css/main.css" rel="stylesheet" type="text/css"/>
-<link href="imgs/iconn.png" rel="shortcut icon" type="x-icon"/>
-<style>
-<script>
+ <head>
+  <meta charset="utf-8"/>
+  <meta content="width=device-width, initial-scale=1" name="viewport"/>
+  <title>
+   Roxiestreams - Watch Live Sports, F1, UFC, NFL, TV
+  </title>
+  <meta content="Free PPV ufc, TV, NBA, NFL, and F1 streams" name="description"/>
+  <meta content="Roxiestreams, ppv, boxing, dazn, f1, ufc, nba, for, stream, online, free, mrgamingstreams, f1, tv, nfl" name="keywords"/>
+  <link href="https://fonts.googleapis.com" rel="preconnect"/>
+  <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
+  <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+  <link href="css/main.css" rel="stylesheet" type="text/css"/>
+  <link href="imgs/iconn.png" rel="shortcut icon" type="x-icon"/>
+  <style>
+   <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
@@ -61,91 +62,257 @@
         h2 {
             color: pink;
         }
-    </style>
-</head>
-<body>
-<nav class="navbar navbar-expand-lg bg-black">
-<div class="container-fluid">
-<a class="navbar-brand" href="https://roxiestreams.live/">RoxieStreams</a>
-<button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbarSupportedContent" data-bs-toggle="collapse" type="button">
-<span class="navbar-toggler-icon"></span>
-</button>
-<div class="collapse navbar-collapse" id="navbarSupportedContent">
-<ul class="navbar-nav me-auto mb-2 mb-lg-0">
-<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/soccer">Soccer</a></li>
-<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/mlb">MLB</a></li>
-<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/nba">NBA</a></li>
-<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/nfl">NFL</a></li>
-<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/nhl">NHL</a></li>
-<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/fighting">Fighting</a></li>
-<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/motorsports">Motorsports</a></li>
-<li class="nav-item"><a class="nav-link" href="https://discord.gg/JhkVmejRmn">Stream Request (Discord)</a></li>
-</ul>
-</div>
-</div></nav>
-<div class="container container-fluid pt-2 text-white">
-<div class="mt-5">
-<h2 class="m-0" style="font-family: 'Kanit', sans-serif; font-weight: bold;">Upcoming NFL &amp; NCAA Events</h2>
-<table id="eventsTable">
-<thead>
-<tr>
-<th>Event</th>
-<th>Start Time</th>
-<th>Countdown</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td><a href="https://roxiestreams.live/nfl-streams-1">Houston Texans vs Los Angeles Chargers</a>
-<td>December 27, 2025 13:30 PM</td>
-<td><span class="countdown-timer" data-end="December 28, 2025 09:00:00" data-start="December 27, 2025 13:30:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/nfl-streams-2">Baltimore Ravens vs Green Bay Packers</a>
-<td>December 27, 2025 17:00 PM</td>
-<td><span class="countdown-timer" data-end="December 28, 2025 16:00:00" data-start="December 27, 2025 17:00:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/ncaa-streams-1">Pitt vs. East Carolina</a>
-<td>December 27, 2025 08:00 AM</td>
-<td><span class="countdown-timer" data-end="December 28, 2025 07:00:00" data-start="December 27, 2025 08:00:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/ncaa-streams-2">Penn State vs. Clemson</a>
-<td>December 27, 2025 09:00 PM</td>
-<td><span class="countdown-timer" data-end="December 28, 2025 08:00:00" data-start="December 27, 2025 09:00:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/ncaa-streams-1">UConn vs. Army</a>
-<td>December 27, 2025 11:15 AM</td>
-<td><span class="countdown-timer" data-end="December 28, 2025 10:15:00" data-start="December 27, 2025 11:15:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/ncaa-streams-2">Georgia Tech vs. BYU</a>
-<td>December 27, 2025 12:30 PM</td>
-<td><span class="countdown-timer" data-end="December 28, 2025 11:30:00" data-start="December 27, 2025 12:30:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/ncaa-streams-3">Miami (Ohio) vs. Fresno State</a>
-<td>December 27, 2025 13:30 PM</td>
-<td><span class="countdown-timer" data-end="December 28, 2025 12:30:00" data-start="December 27, 2025 13:30:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/ncaa-streams-1">North Texas vs. San Diego State</a>
-<td>December 27, 2025 14:45 PM</td>
-<td><span class="countdown-timer" data-end="December 28, 2025 13:45:00" data-start="December 27, 2025 14:45:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/ncaa-streams-2">Virginia vs. Missouri</a>
-<td>December 27, 2025 16:30 PM</td>
-<td><span class="countdown-timer" data-end="December 28, 2025 15:30:00" data-start="December 27, 2025 16:30:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/ncaa-streams-1">LSU vs. 21 Houston</a>
-<td>December 27, 2025 18:15 PM</td>
-<td><span class="countdown-timer" data-end="December 28, 2025 17:15:00" data-start="December 27, 2025 18:15:00"></span></td>
-<tr>
-</tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></tbody></table></div>
-<footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
-<ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
-<li class="nav-item"><a class="nav-link px-2 text-body-secondary" href="https://discord.gg/JhkVmejRmn">Stream Request (Discord)</a></li>
-</ul>
-<p class="mb-0 text-body-secondary text-center text-lg-start">Roxiestreams © 2024</p>
-</footer>
-<script src="js/bootstrap.bundle.min.js"></script>
-<script>
-        function startCountdown() {
+  </style>
+ </head>
+ <body>
+  <nav class="navbar navbar-expand-lg bg-black">
+   <div class="container-fluid">
+    <a class="navbar-brand" href="https://roxiestreams.live/">
+     RoxieStreams
+    </a>
+    <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbarSupportedContent" data-bs-toggle="collapse" type="button">
+     <span class="navbar-toggler-icon">
+     </span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+      <li class="nav-item">
+       <a class="nav-link" href="https://roxiestreams.live/soccer">
+        Soccer
+       </a>
+      </li>
+      <li class="nav-item">
+       <a class="nav-link" href="https://roxiestreams.live/mlb">
+        MLB
+       </a>
+      </li>
+      <li class="nav-item">
+       <a class="nav-link" href="https://roxiestreams.live/nba">
+        NBA
+       </a>
+      </li>
+      <li class="nav-item">
+       <a class="nav-link" href="https://roxiestreams.live/nfl">
+        NFL
+       </a>
+      </li>
+      <li class="nav-item">
+       <a class="nav-link" href="https://roxiestreams.live/nhl">
+        NHL
+       </a>
+      </li>
+      <li class="nav-item">
+       <a class="nav-link" href="https://roxiestreams.live/fighting">
+        Fighting
+       </a>
+      </li>
+      <li class="nav-item">
+       <a class="nav-link" href="https://roxiestreams.live/motorsports">
+        Motorsports
+       </a>
+      </li>
+      <li class="nav-item">
+       <a class="nav-link" href="https://discord.gg/JhkVmejRmn">
+        Stream Request (Discord)
+       </a>
+      </li>
+     </ul>
+    </div>
+   </div>
+  </nav>
+  <div class="container container-fluid pt-2 text-white">
+   <div class="mt-5">
+    <h2 class="m-0" style="font-family: 'Kanit', sans-serif; font-weight: bold;">
+     Upcoming NFL &amp; NCAA Events
+    </h2>
+    <table id="eventsTable">
+     <thead>
+      <tr>
+       <th>
+        Event
+       </th>
+       <th>
+        Start Time
+       </th>
+       <th>
+        Countdown
+       </th>
+      </tr>
+     </thead>
+     <tbody>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/redzone">
+         NFL Redzone
+        </a>
+       </td>
+       <td>
+        December 28, 2025 10:00 AM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 29, 2025 10:00 AM:00" data-start="December 28, 2025 10:00 AM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nfl-streams-1">
+         Arizona Cardinals vs Cincinnati Bengals
+        </a>
+       </td>
+       <td>
+        December 28, 2025 10:00 AM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 29, 2025 10:00 AM:00" data-start="December 28, 2025 10:00 AM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nfl-streams-2">
+         Pittsburgh Steelers vs Cleveland Browns
+        </a>
+       </td>
+       <td>
+        December 28, 2025 10:00 AM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 29, 2025 10:00 AM:00" data-start="December 28, 2025 10:00 AM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nfl-streams-3">
+         New Orleans Saints vs Tennessee Titans
+        </a>
+       </td>
+       <td>
+        December 28, 2025 10:00 AM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 29, 2025 10:00 AM:00" data-start="December 28, 2025 10:00 AM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nfl-streams-4">
+         Jacksonville Jaguars vs Indianapolis Colts
+        </a>
+       </td>
+       <td>
+        December 28, 2025 10:00 AM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 29, 2025 10:00 AM:00" data-start="December 28, 2025 10:00 AM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nfl-streams-5">
+         Tampa Bay Buccaneers vs Miami Dolphins
+        </a>
+       </td>
+       <td>
+        December 28, 2025 10:00 AM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 29, 2025 10:00 AM:00" data-start="December 28, 2025 10:00 AM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nfl-streams-6">
+         New England Patriots vs New York
+        </a>
+       </td>
+       <td>
+        December 28, 2025 10:00 AM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 29, 2025 10:00 AM:00" data-start="December 28, 2025 10:00 AM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nfl-streams-7">
+         Seattle Seahawks vs Carolina Panthers
+        </a>
+       </td>
+       <td>
+        December 28, 2025 10:00 AM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 29, 2025 10:00 AM:00" data-start="December 28, 2025 10:00 AM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nfl-streams-8">
+         New York vs Las Vegas Raiders
+        </a>
+       </td>
+       <td>
+        December 28, 2025 1:05 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 29, 2025 1:05 PM:00" data-start="December 28, 2025 1:05 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nfl-streams-9">
+         Philadelphia Eagles vs Buffalo Bills
+        </a>
+       </td>
+       <td>
+        December 28, 2025 1:25 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 29, 2025 1:25 PM:00" data-start="December 28, 2025 1:25 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nfl-streams-10">
+         Chicago Bears vs San Francisco 49ers
+        </a>
+       </td>
+       <td>
+        December 28, 2025 5:20 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 29, 2025 5:20 PM:00" data-start="December 28, 2025 5:20 PM:00">
+        </span>
+       </td>
+      </tr>
+     </tbody>
+    </table>
+    <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
+     <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
+      <li class="nav-item">
+       <a class="nav-link px-2 text-body-secondary" href="https://discord.gg/JhkVmejRmn">
+        Stream Request (Discord)
+       </a>
+      </li>
+     </ul>
+     <p class="mb-0 text-body-secondary text-center text-lg-start">
+      Roxiestreams © 2024
+     </p>
+    </footer>
+    <script src="js/bootstrap.bundle.min.js">
+    </script>
+    <script>
+     function startCountdown() {
             var countdownElements = document.querySelectorAll('.countdown-timer');
 
             countdownElements.forEach(function(element) {
@@ -175,5 +342,7 @@
 
         window.onload = startCountdown;
     </script>
-</div></body>
+   </div>
+  </div>
+ </body>
 </html>
