--- a/nhl.html
+++ b/nhl.html
@@ -159,6 +159,34 @@
             <td><a href="https://roxiestreams.live/nhl-streams-13">Colorado Avalanche vs Vegas Golden Knights</a></td>
             <td>December 27, 2025 07:00 PM</td>
             <td><span class="countdown-timer" data-end="2025-12-28 19:00:00" data-start="2025-12-27 19:00:00"></span></td>
+        </tr>
+        <tr style="background-color: #333; color: white;">
+            <td colspan="3"><strong>Sunday, December 28, 2025</strong></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-1">Montreal Canadiens vs Tampa Bay Lightning</a></td>
+            <td>December 28, 2025 02:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-29 14:00:00" data-start="2025-12-28 14:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-2">New York Islanders vs Columbus Blue Jackets</a></td>
+            <td>December 28, 2025 02:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-29 14:00:00" data-start="2025-12-28 14:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-3">Toronto Maple Leafs vs Detroit Red Wings</a></td>
+            <td>December 28, 2025 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-29 16:00:00" data-start="2025-12-28 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-4">Pittsburgh Penguins vs Chicago Blackhawks</a></td>
+            <td>December 28, 2025 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-29 16:00:00" data-start="2025-12-28 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-5">Philadelphia Flyers vs Seattle Kraken</a></td>
+            <td>December 28, 2025 05:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-29 17:00:00" data-start="2025-12-28 17:00:00"></span></td>
         </tr></tbody></table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
