--- a/soccer.html
+++ b/soccer.html
@@ -96,39 +96,19 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-1">Milan vs Verona</a>
-<td>December 27, 2025 04:30 AM</td>
-<td><span class="countdown-timer" data-end="December 28, 2025 03:30:00" data-start="December 27, 2025 04:30:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-2">Cremonese vs Napoli</a>
-<td>December 27, 2025 04:30 AM</td>
-<td><span class="countdown-timer" data-end="December 28, 2025 03:30:00" data-start="December 27, 2025 04:30:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-3">Sunderland vs Leeds United</a>
-<td>December 27, 2025 06:00 AM</td>
-<td><span class="countdown-timer" data-end="December 28, 2025 05:00:00" data-start="December 27, 2025 06:00:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-3">Crystal Palace vs Tottenham</a>
-<td>December 27, 2025 07:00 AM</td>
-<td><span class="countdown-timer" data-end="December 28, 2025 06:00:00" data-start="December 27, 2025 07:00:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-4">Bologna vs Sassuolo</a>
-<td>December 27, 2025 07:00 AM</td>
-<td><span class="countdown-timer" data-end="December 28, 2025 06:00:00" data-start="December 27, 2025 07:00:00"></span></td>
-<tr>
 <td><a href="https://roxiestreams.live/soccer-streams-5">Sporting Braga vs Benfica</a>
-<td>December 27, 2025 07:00 AM</td>
-<td><span class="countdown-timer" data-end="December 28, 2025 06:00:00" data-start="December 27, 2025 07:00:00"></span></td>
+<td>December 28, 2025 10:00 AM</td>
+<td><span class="countdown-timer" data-end="December 29, 2025 09:00:00" data-start="December 28, 2025 10:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-6">Atalanta vs Inter Milan</a>
-<td>December 27, 2025 07:00 AM</td>
-<td><span class="countdown-timer" data-end="December 28, 2025 06:00:00" data-start="December 27, 2025 07:00:00"></span></td>
+<td>December 28, 2025 11:45 AM</td>
+<td><span class="countdown-timer" data-end="December 29, 2025 10:45:00" data-start="December 28, 2025 11:45:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-7"xSporting CP vs Rio Ave</a>
-<td>December 27, 2025 07:00 AM</td>
-<td><span class="countdown-timer" data-end="December 28, 2025 06:00:00" data-start="December 27, 2025 07:00:00"></span></td>
+<td><a a="" ave<="" cp="" href="https://roxiestreams.live/soccer-streams-7" rio="" vs="" xsporting="">
+<td>December 28, 2025 12:30 PM</td>
+<td><span class="countdown-timer" data-end="December 29, 2025 11:30:00" data-start="December 28, 2025 12:30:00"></span></td>
 <tr>
-</tbody></table></div>
+</tr></a></td></tr></td></tr></td></tr></tbody></table></div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
 <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
 <li class="nav-item"><a class="nav-link px-2 text-body-secondary" href="https://discord.gg/JhkVmejRmn">Stream Request (Discord)</a></li>
