--- a/soccer-streams-2.html
+++ b/soccer-streams-2.html
@@ -15,7 +15,6 @@
 <script disable-devtool-auto src='https://cdn.jsdelivr.net/npm/disable-devtool/disable-devtool.min.js'></script>
     <script src="https://cdn.jsdelivr.net/npm/clappr@latest/dist/clappr.min.js"></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-EQ3BHVQGMN"></script>
-    <script async src="https://ss.mrmnd.com/static/c5f6662b-8d5a-4b10-9ee0-3e2c4520421a.js"></script>
     <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
@@ -100,8 +99,7 @@
         <div class="fullplayer">
             <div id="playerContainer"></div>
             <div class="streamchanger">
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://daffodil.shadow-ran.online/main.m3u8')">Stream 1</button>
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://daffodil.shadow-ran.online/cbssn.m3u8')">Stream 2</button>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://600.roxiestreams.live/tudn.m3u8')">Stream 1</button>
             </div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.live"></iframe>
@@ -136,7 +134,7 @@
         }
 
         window.onload = function() {
-            showPlayer('clappr', 'https://daffodil.shadow-ran.online/main.m3u8');
+            showPlayer('clappr', 'https://600.roxiestreams.live/tudn.m3u8');
         };
     </script>
     <script>
