--- a/soccer.html
+++ b/soccer.html
@@ -96,19 +96,27 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-5">Sporting Braga vs Benfica</a>
-<td>December 28, 2025 10:00 AM</td>
-<td><span class="countdown-timer" data-end="December 29, 2025 09:00:00" data-start="December 28, 2025 10:00:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-1">Coventry City vs Ipswich Town</a>
+<td>December 29, 2025 10:00 AM</td>
+<td><span class="countdown-timer" data-end="December 30, 2025 09:00:00" data-start="December 29, 2025 10:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-6">Atalanta vs Inter Milan</a>
-<td>December 28, 2025 11:45 AM</td>
-<td><span class="countdown-timer" data-end="December 29, 2025 10:45:00" data-start="December 28, 2025 11:45:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-2">Roma vs Genoa</a>
+<td>December 29, 2025 11:45 AM</td>
+<td><span class="countdown-timer" data-end="December 30, 2025 10:45:00" data-start="December 29, 2025 11:45:00"></span></td>
 <tr>
-<td><a a="" ave<="" cp="" href="https://roxiestreams.live/soccer-streams-7" rio="" vs="" xsporting="">
-<td>December 28, 2025 12:30 PM</td>
-<td><span class="countdown-timer" data-end="December 29, 2025 11:30:00" data-start="December 28, 2025 12:30:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-3">Birmingham City vs Southampton</a>
+<td>December 29, 2025 12:15 PM</td>
+<td><span class="countdown-timer" data-end="December 30, 2025 11:15:00" data-start="December 29, 2025 12:15:00"></span></td>
 <tr>
-</tr></a></td></tr></td></tr></td></tr></tbody></table></div>
+<td><a href="https://roxiestreams.live/soccer-streams-4">Porto vs AVS</a>
+<td>December 29, 2025 12:15 PM</td>
+<td><span class="countdown-timer" data-end="December 30, 2025 11:15:00" data-start="December 29, 2025 12:15:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-5">Tlxcala vs Pachuca</a>
+<td>December 29, 2025 16:00 PM</td>
+<td><span class="countdown-timer" data-end="December 30, 2025 15:00:00" data-start="December 29, 2025 16:00:00"></span></td>
+<tr>
+</tr></td></tr></td></tr></td></tr></td></tr></td></tr></tbody></table></div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
 <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
 <li class="nav-item"><a class="nav-link px-2 text-body-secondary" href="https://discord.gg/JhkVmejRmn">Stream Request (Discord)</a></li>
