--- a/motorsports.html
+++ b/motorsports.html
@@ -102,7 +102,7 @@
 <td><span class="countdown-timer" data-end="December 28, 2025 13:00:00" data-start="December 28, 2025 01:00:00"></span>
 </td>
 <tr>
-<td><a href="https://roxiesWtreams.live/floracing-1">Kubota High Limit Racing - Prelim Night 2</a></td>
+<td><a href="https://roxiestreams.live/floracing-1">Kubota High Limit Racing - Prelim Night 2</a></td>
 <td>December 29, 2025 01:00 AM</td>
 <td><span class="countdown-timer" data-end="December 29, 2025 13:00:00" data-start="December 29, 2025 01:00:00"></span>
 </td>
