--- a/nfl-streams-1.html
+++ b/nfl-streams-1.html
@@ -101,7 +101,7 @@
 	<div class="streamchanger">
 	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('nfl.m3u8', '601'))">Stream 1</button>
 	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('darts.m3u8', 'daffodil'))">Stream 2</button>
-	  <button class="streambutton" onclick="showPlayer('clappr', 'https://llhls-live.akamaized.net/exp=1767063964~acl=%2F5240e052-08a8-4d2b-a4ae-033c78d2fa50_llhls%2F%2A~hmac=5ed0b67b8869e8bc9343ed220f2e6d9405d38b00482ce4450999a96b52882d5d/5240e052-08a8-4d2b-a4ae-033c78d2fa50_llhls/avc/hls.m3u8')">Stream 3</button>
+	  <button class="streambutton" onclick="showPlayer('clappr', 'https://3e9dca1c6510.entrypoint.cloud.wowza.com/app-K707G7C6/ngrp:2d785c77_all/playlist.m3u8')">Stream 3</button>
 	</div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.live"></iframe>
