--- a/soccer-streams-7.html
+++ b/soccer-streams-7.html
@@ -128,9 +128,9 @@
                     height: '100%',
                     width: '100%',
                     autoPlay: true,
-                    plugins: { core: ['QualitySelector'] }, // Quality selector for multi-bitrate streams
+                    plugins: { core: ['QualitySelector'] },
                     qualitySelectorConfig: {
-                        defaultQuality: -1 // Auto quality (-1), change to 0+ for specific level
+                        defaultQuality: -1
                     }
                 });
             }
