--- a/soccer-streams-7.html
+++ b/soccer-streams-7.html
@@ -131,6 +131,7 @@
                     parentId: "#playerContainer",
                     height: '100%',
                     width: '100%',
+                    plugins: [Clappr.PlaybackLevels, QualitySelector], // Add the QualitySelector plugin
                     autoPlay: true,
                 });
             }
