--- a/soccer-streams-7.html
+++ b/soccer-streams-7.html
@@ -12,9 +12,12 @@
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link href="/css/buttons.css" rel="stylesheet">
     <link href="imgs/iconn.png" rel="shortcut icon" type="x-icon"/>
+    
+    <!-- CRITICAL: Load in this exact order -->
     <script src="https://cdn.jsdelivr.net/npm/clappr@latest/dist/clappr.min.js"></script>
-    <!-- OFFICIAL Level Selector Plugin - WORKS with latest Clappr -->
+    <script src="https://cdn.jsdelivr.net/npm/@clappr/playback-levels@latest/dist/playback-levels.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/clappr-level-selector-plugin@0.3.0/dist/level-selector.min.js"></script>
+    
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-EQ3BHVQGMN"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
@@ -97,7 +100,7 @@
         <div class="fullplayer">
             <div id="playerContainer"></div>
             <div class="streamchanger">
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://daffodil.shadow-ran.online/arsenal.m3u8')">Stream 1</button>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://streams.bitmovin.com/d59p9366okvm4g5agge0/manifest.m3u8')">Stream 1</button>
                 <button class="streambutton" onclick="showPlayer('clappr', 'https://streams.bitmovin.com/d59p9366okvm4g5agge0/manifest.m3u8')">Stream 2 (Multi Quality)</button>
             </div>
             <div class="embedchat">
@@ -128,13 +131,15 @@
                     height: '100%',
                     width: '100%',
                     autoPlay: true,
-                    plugins: ['level-selector']  // String name only!
+                    // String names ONLY - matches your working extension
+                    playback: { levels: true }, 
+                    plugins: ['playback-levels', 'level-selector']
                 });
             }
         }
 
         window.onload = function() {
-            showPlayer('clappr', 'https://daffodil.shadow-ran.online/arsenal.m3u8');
+            showPlayer('clappr', 'https://streams.bitmovin.com/d59p9366okvm4g5agge0/manifest.m3u8');
         };
     </script>
     <script src="js/bootstrap.bundle.min.js"></script>
