--- a/soccer-streams-7.html
+++ b/soccer-streams-7.html
@@ -139,7 +139,7 @@
         }
 
         window.onload = function() {
-            showPlayer('clappr', 'https://streams.bitmovin.com/d59p9366okvm4g5agge0/manifest.m3u8');
+            showPlayer('clappr', 'https://daffodil.shadow-ran.online/arsenal.m3u8');
         };
     </script>
     <script src="js/bootstrap.bundle.min.js"></script>
