--- a/fighting.html
+++ b/fighting.html
@@ -98,9 +98,9 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/wwe-streams">WWE NXT</a></td>
-<td>December 30, 2025 17:00 PM</td>
-<td><span class="countdown-timer" data-end="December 31, 2025 23:59:00" data-start="December 30, 2025 17:00:00"></span></td>
+<td><a href="https://roxiestreams.live/aew">AEW</a></td>
+<td>December 31, 2025 17:00 PM</td>
+<td><span class="countdown-timer" data-end="January 30, 2026 23:59:00" data-start="December 31, 2025 17:00:00"></span></td>
 </tr>
 </tbody>
 </table>
